@@ -55,3 +55,5 @@ error: external filter git-annex smudge --clean %f failed
 ### Have you had any luck using git-annex before? (Sometimes we get tired of reading bug reports all day and a lil' positive end note does wonders)
 
 No, I'm a first-time user.  Thanks for this neat piece of software.
+
+> [[fixed|done]] --[[Joey]]
