@@ -1,5 +1,7 @@
 git-annex (6.20160420) UNRELEASED; urgency=medium
 
+  * Fix bug that sometimes prevented git-annex smudge --clean from consuming
+    all its input, which resulted in git add bypassing git-annex.
   * Fix build with directory-1.2.6.2.
 
  -- Joey Hess <id@joeyh.name>  Thu, 28 Apr 2016 13:17:04 -0400
